improved nginx routing

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,10 @@ server {
        #try_files $uri$1$is_args$args @app;
     }
 
+    location /tale {
+       try_files $uri $uri/ /index.html;
+    }
+
     location ~ ^/(audio|story) {
     # location /audio {
         root   /usr/share/nginx/static;
